fix state update
