# back/OperationAPI/src/main/resources/swagger/operation-api.yml
@@ -142,23 +142,21 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
 
   /operations/{id}/state:
-    put:
+    patch:
       tags:
         - Operation
-      summary: Changer l'état d'une opération
-      description: "Use Case 13 (Administrateur): Changer l'état d'une opération / Use Case 21 (Administrateur): Mettre à jour l'état d'une opération"
+      summary: Changer l'état d'une opéation
       parameters:
         - name: id
           in: path
           required: true
           schema:
             type: integer
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ChangeStateRequest'
+        - name: state
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/OperationState'
       responses:
         '200':
           description: État modifié avec succès
@@ -386,14 +384,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Beneficiary'
-
-    ChangeStateRequest:
-      type: object
-      properties:
-        state:
-          $ref: '#/components/schemas/OperationState'
-      required:
-        - state
 
     Error:
       type: object
